@@ -37,13 +37,15 @@ import no.unit.nva.model.AdditionalIdentifier;
 import no.unit.nva.model.Organization;
 import nva.commons.core.SingletonCollector;
 import nva.commons.core.StringUtils;
+import nva.commons.core.paths.UriWrapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 public class ContributorExtractorTest {
 
-    public static final URI CRISTIN_ID = randomUri();
+    public static final URI CRISTIN_ORGANISATION_ID_FROM_FETCH_ORGANISATION_RESPONSE = randomUri();
+    public static final String ORCID_HOST_NAME = "orcid.org";
     public CristinConnection cristinConnection;
     private PiaConnection piaConnection;
     private NvaCustomerConnection nvaCustomerConnection;
@@ -111,8 +113,8 @@ public class ContributorExtractorTest {
                               .stream()
                               .collect(SingletonCollector.collect());
 
-        var id = ((Organization) contributor.getAffiliations().get(0)).getId();
-        assertThat(id, is(equalTo(CRISTIN_ID)));
+        var id = ((Organization) contributor.getAffiliations().getFirst()).getId();
+        assertThat(id, is(equalTo(CRISTIN_ORGANISATION_ID_FROM_FETCH_ORGANISATION_RESPONSE)));
     }
 
     @Test
@@ -200,9 +202,9 @@ public class ContributorExtractorTest {
         var expectedAffiliations = cristinPerson.getAffiliations().stream().filter(Affiliation::isActive).toList();
         var actualOrganizations = contributor.getAffiliations();
 
-        var id = ((Organization) contributor.getAffiliations().get(0)).getId();
+        var id = ((Organization) contributor.getAffiliations().getFirst()).getId();
         assertThat(actualOrganizations.size(), is(equalTo(expectedAffiliations.size())));
-        assertThat(id, is(equalTo(expectedAffiliations.get(0).getOrganization())));
+        assertThat(id, is(equalTo(expectedAffiliations.getFirst().getOrganization())));
     }
 
     @Test
@@ -224,7 +226,7 @@ public class ContributorExtractorTest {
         var expectedAdditionalIdentifier = new AdditionalIdentifier(SCOPUS_AUID, auid);
         var document = ScopusGenerator.createWithOneAuthorGroupAndAffiliation(createAuthorWithAuid(auid)).getDocument();
         mockRandomCristinOrgResponse();
-        var nvaContributor = contributorExtractorFromDocument(document).generateContributors().get(0);
+        var nvaContributor = contributorExtractorFromDocument(document).generateContributors().getFirst();
         assertThat(nvaContributor.getIdentity().getAdditionalIdentifiers(), hasItem(expectedAdditionalIdentifier));
     }
 
@@ -235,20 +237,13 @@ public class ContributorExtractorTest {
         var document = ScopusGenerator.createWithOneAuthorGroupAndAffiliation(createAuthorWithAuid(auid)).getDocument();
         mockCristinPersonWithoutAffiliationResponse();
         mockRandomCristinOrgResponse();
-        var nvaContributor = contributorExtractorFromDocument(document).generateContributors().get(0);
+        var nvaContributor = contributorExtractorFromDocument(document).generateContributors().getFirst();
         assertThat(nvaContributor.getIdentity().getAdditionalIdentifiers(), hasItem(expectedAdditionalIdentifier));
     }
 
     @Test
     void shouldCreateContributorFromAuthorTypeWhenBadResponseFromCristinAndNoOrcId() {
-        var authorTp = new AuthorTp();
-        authorTp.setAuid(randomString());
-        authorTp.setSeq(String.valueOf(1));
-        var personalnameType = randomPersonalnameType();
-        authorTp.setPreferredName(personalnameType);
-        authorTp.setIndexedName(personalnameType.getIndexedName());
-        authorTp.setGivenName(personalnameType.getGivenName());
-        authorTp.setSurname(personalnameType.getSurname());
+        var authorTp = createRandomAuthorTp();
         var document = ScopusGenerator.createWithSingleContributorFromAuthorTp(authorTp).getDocument();
         mockCristinPersonBadRequestResponse();
         var contributor = contributorExtractorFromDocument(document).generateContributors()
@@ -258,6 +253,93 @@ public class ContributorExtractorTest {
         assertThat(contributor.getIdentity().getId(), is(nullValue()));
     }
 
+    @Test
+    void shouldExtractOrcIdFromXmlWhenCristinPersonIsPresentButIsMissingOrcId() {
+        var authorTp = createRandomAuthorTp();
+        var orcIdFromXml = randomString();
+        authorTp.setOrcid(orcIdFromXml);
+        var document = ScopusGenerator.createWithSingleContributorFromAuthorTp(authorTp).getDocument();
+        mockCristinPersonWithoutOrcId();
+        var contributor = contributorExtractorFromDocument(document).generateContributors()
+                              .stream()
+                              .collect(SingletonCollector.collect());
+        var expectedOrcId = UriWrapper.fromHost(ORCID_HOST_NAME).addChild(orcIdFromXml).toString();
+
+        assertThat(contributor.getIdentity().getOrcId(), is(equalTo(expectedOrcId)));
+    }
+
+    @Test
+    void shouldSetOrcIdToNullWhenMissingBothInXmlAndCristinPerson() {
+        var authorTp = createRandomAuthorTp();
+        var document = ScopusGenerator.createWithSingleContributorFromAuthorTp(authorTp).getDocument();
+        mockCristinPersonWithoutOrcId();
+        var contributor = contributorExtractorFromDocument(document).generateContributors()
+                              .stream()
+                              .collect(SingletonCollector.collect());
+
+        assertThat(contributor.getIdentity().getOrcId(), is(nullValue()));
+    }
+
+    @DisplayName("Should create contributor with active cristin affiliation from fetch cristin person response only" +
+                 "when cristin organisation from fetch cristin organisation response is also present.")
+    @Test
+    void shouldCreateContributorWithCristinPersonActiveAffiliationsOnlyWhenCristinOrganisationIsAlsoPresent() {
+        var authorTp = createRandomAuthorTp();
+        var document = ScopusGenerator.createWithSingleContributorFromAuthorTp(authorTp).getDocument();
+
+        var mockedCristinPersonResponse = mockCristinPersonWithSingleActiveAffiliationResponse();
+        mockRandomCristinOrgResponse();
+
+        var contributorAffiliations = contributorExtractorFromDocument(document).generateContributors()
+                              .stream()
+                              .collect(SingletonCollector.collect())
+                              .getAffiliations();
+
+        var actualAffiliationId = ((Organization) contributorAffiliations.getFirst()).getId();
+        var expectedAffiliationId = getActiveAffiliation(mockedCristinPersonResponse);
+
+        assertThat(contributorAffiliations, hasSize(1));
+        assertThat(actualAffiliationId, is(equalTo(expectedAffiliationId)));
+    }
+
+    @DisplayName("Should create contributor with affiliation from fetch cristin organisation response" +
+                 "when fetch cristin person response is missing active affiliations.")
+    @Test
+    void shouldCreateContributorWithAffiliationsFromCristinOrganisationResponseWhenCristinPersonMissesAffiliations() {
+        var authorTp = createRandomAuthorTp();
+        var document = ScopusGenerator.createWithSingleContributorFromAuthorTp(authorTp).getDocument();
+
+        mockCristinPersonWithoutAffiliationResponse();
+        mockRandomCristinOrgResponse();
+
+        var contributorAffiliations = contributorExtractorFromDocument(document).generateContributors()
+                                          .stream()
+                                          .collect(SingletonCollector.collect())
+                                          .getAffiliations();
+
+        var actualAffiliationId = ((Organization) contributorAffiliations.getFirst()).getId();
+
+        assertThat(contributorAffiliations, hasSize(1));
+        assertThat(actualAffiliationId, is(equalTo(CRISTIN_ORGANISATION_ID_FROM_FETCH_ORGANISATION_RESPONSE)));
+    }
+
+    private static URI getActiveAffiliation(CristinPerson cristinPersonResponse) {
+        return cristinPersonResponse.getAffiliations().stream()
+                   .filter(Affiliation::isActive)
+                   .iterator().next().getOrganization();
+    }
+
+    private static AuthorTp createRandomAuthorTp() {
+        var authorTp = new AuthorTp();
+        authorTp.setAuid(randomString());
+        authorTp.setSeq(String.valueOf(1));
+        var personalnameType = randomPersonalnameType();
+        authorTp.setPreferredName(personalnameType);
+        authorTp.setIndexedName(personalnameType.getIndexedName());
+        authorTp.setGivenName(personalnameType.getGivenName());
+        authorTp.setSurname(personalnameType.getSurname());
+        return authorTp;
+    }
 
     private AuthorGroupTp createAuthorWithAuid(String auid) {
         var authorTp = new AuthorTp();
@@ -281,9 +363,9 @@ public class ContributorExtractorTest {
                                .getBibrecord()
                                .getHead()
                                .getAuthorGroup()
-                               .get(0)
+                               .getFirst()
                                .getAuthorOrCollaboration()
-                               .get(0)).getOrcid();
+                               .getFirst()).getOrcid();
     }
 
     private static List<AuthorGroupTp> getAuthorGroup(DocTp document) {
@@ -301,6 +383,14 @@ public class ContributorExtractorTest {
                                                                                        randomString());
         when(cristinConnection.getCristinPersonByCristinId(personCristinId)).thenReturn(Optional.of(person));
         return person;
+    }
+
+    private void mockCristinPersonWithoutOrcId() {
+        var personCristinId = randomUri();
+        when(piaConnection.getCristinPersonIdentifier(any())).thenReturn(Optional.of(personCristinId));
+        var person = CristinGenerator.generateCristinPersonWithoutOrcId(
+            personCristinId, randomString(), randomString());
+        when(cristinConnection.getCristinPersonByCristinId(personCristinId)).thenReturn(Optional.of(person));
     }
 
     private CristinOrganization mockSearchOrganizationByNameResponse(String institutionName) {
@@ -322,7 +412,7 @@ public class ContributorExtractorTest {
     private void mockRandomCristinOrgResponse() {
         when(piaConnection.fetchCristinOrganizationIdentifier(any())).thenReturn(Optional.of(randomUri()));
         when(cristinConnection.fetchCristinOrganizationByCristinId(any())).thenReturn(
-            CristinGenerator.generateCristinOrganization(CRISTIN_ID));
+            CristinGenerator.generateCristinOrganization(CRISTIN_ORGANISATION_ID_FROM_FETCH_ORGANISATION_RESPONSE));
     }
 
     private void mockOtherCristinOrgResponseWithOtherOrganization() {
